@@ -137,7 +137,10 @@ oldLDFLAGS=$LDFLAGS
 CPPFLAGS="$AM_CPPFLAGS $CPPFLAGS $YAMLCPP_CPPFLAGS"
 LDFLAGS="$AM_LDFLAGS $LDFLAGS $YAMLCPP_LDFLAGS"
 AC_CHECK_HEADER([yaml-cpp/yaml.h], [], [AC_MSG_ERROR([yaml-cpp/yaml.h header not found.])])
-# TODO: Check that YAML::LoadFile exists, i.e. API version is 0.5
+AC_CHECK_HEADER([yaml-cpp/node.h], [YAMLCPP_MAJOR_VERSION=3])
+AC_CHECK_HEADER([yaml-cpp/node/node.h], [YAMLCPP_MAJOR_VERSION=5])
+AC_MSG_NOTICE([yaml-cpp API version = $YAMLCPP_MAJOR_VERSION])
+AC_SUBST(YAMLCPP_MAJOR_VERSION)
 CPPFLAGS=$oldCPPFLAGS
 LDFLAGS=$oldLDFLAGS
 AC_SUBST(YAMLCPP_CPPFLAGS)
