@@ -12,6 +12,6 @@ if ENABLE_LHAGLUE
   libLHAPDF_la_SOURCES += LHAGlue.cc
 endif
 
-libLHAPDF_la_CPPFLAGS = $(AM_CPPFLAGS) $(BOOST_CPPFLAGS) $(YAMLCPP_CPPFLAGS)
+libLHAPDF_la_CPPFLAGS = $(AM_CPPFLAGS) $(BOOST_CPPFLAGS) $(YAMLCPP_CPPFLAGS) -DYAMLCPP_API=$(YAMLCPP_MAJOR_VERSION)
 libLHAPDF_la_LDFLAGS = $(AM_LDFLAGS) -L$(prefix)/lib $(BOOST_LDFLAGS) $(YAMLCPP_LDFLAGS) -export-dynamic
 libLHAPDF_la_LIBADD = $(BOOST_LIBS) $(YAMLCPP_LIBS)
